# min-repros

./: .gitignore  CMakeLists.txt  README.md  testbed.cpp  warpaffine.hpp
ghidra-android-arm-argument/: CMakeLists.txt  README.md  testbed.c
test_GS_EHsc_link_error/: README.md
test_GS_EHsc_link_error/hello/: CMakeLists.txt  hello.cpp  hello.h  hello_test.cpp
test_GS_EHsc_link_error/use_hello/: .gitignore  CMakeLists.txt  testbed.cpp
test_M1_cmake_source_dir/: CMakeLists.txt  README.md  hello.hpp
test_M1_cmake_source_dir/src/: CMakeLists.txt  testbed.cpp
test_VS_debug_build_type_use_release_library/: README.md
test_VS_debug_build_type_use_release_library/hello/: CMakeLists.txt
test_VS_debug_build_type_use_release_library/use_hello/: CMakeLists.txt  README.md
test_asan_for_intrinsics/: .gitignore  CMakeLists.txt  README.md  testbed.cpp
test_cmake_ndk-r24/: .gitignore  CMakeLists.txt  README.md  testbed.cpp
test_codelldb_remote_arm64_read_register/: .gitignore  CMakeLists.txt  README.md  asmfilter.py  main.cpp
test_corrupted_stack_by_ODRV/: .gitignore  CMakeLists.txt  README.md  asan.cmake  hello.cpp  main.cpp  rect.cpp  rect.h  run.py
test_duplicated_same_name_header_file_cause_compile_error/: CMakeLists.txt  README.md  testbed.cpp
test_duplicated_same_name_header_file_cause_compile_error/hello/: hello.cpp  hello.h  version.h
test_duplicated_same_name_header_file_cause_compile_error/inc/: version.h
test_gtest_ndk_asan/: .gitignore  CMakeLists.txt  README.md  asan.cmake  testbed.cpp
test_gtest_typed_test_on_android_ndk/: CMakeLists.txt  README.md  testbed.cpp
test_lldb_formatter_simd/: CMakeLists.txt  README.md  dbg_print.py  testbed.cpp
test_ncnn_warp/: CMakeLists.txt  README.md  autotimer.hpp  warpaffine.cpp
test_ndk-r23c-CMAKE_CXX_FLAGS_RELEASE/: .gitignore  CMakeLists.txt  README.md
test_ndk-r23c-CMAKE_CXX_FLAGS_RELEASE/build-r21e/: log.txt
test_ndk-r23c-CMAKE_CXX_FLAGS_RELEASE/build-r21e/android-arm64/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  testbed
test_ndk-r23c-CMAKE_CXX_FLAGS_RELEASE/build-r23/: android-arm64-build-legacy-false.sh  android-arm64-build-legacy-true.sh  android-arm64-build.sh  log.txt  log2.txt  log3.txt
test_ndk-r23c-CMAKE_CXX_FLAGS_RELEASE/build-r23b/: android-arm64-build-legacy-false.sh  android-arm64-build-legacy-true.sh  android-arm64-build.sh  log.txt  log2.txt
test_ndk-r23c-CMAKE_CXX_FLAGS_RELEASE/build-r23b/android-arm64/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
test_ndk-r23c-CMAKE_CXX_FLAGS_RELEASE/build-r23b/android-arm64-legacy-false/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  testbed
test_ndk-r23c-CMAKE_CXX_FLAGS_RELEASE/build-r23c/: android-arm64-build-legacy-false.sh  android-arm64-build-legacy-true.sh  android-arm64-build.sh  log.txt  log2.txt
test_ndk-r23c-CMAKE_CXX_FLAGS_RELEASE/build-r23c/android-arm64/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  testbed
test_ndk-r23c-CMAKE_CXX_FLAGS_RELEASE/build-r23c/android-arm64-legacy-false/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  testbed
test_one_VS_DLL_linked_to_both_build_types_is_dangerous/: README.md
test_one_VS_DLL_linked_to_both_build_types_is_dangerous/hello/: CMakeLists.txt  hello.cpp  hello.h
test_one_VS_DLL_linked_to_both_build_types_is_dangerous/use_hello/: .gitignore  CMakeLists.txt  copy_dll.cmake  testbed.cpp
test_one_VS_DLL_linked_to_both_build_types_is_dangerous/use_hello/hello_shared_debug/: CMakeLists.txt
test_one_VS_DLL_linked_to_both_build_types_is_dangerous/use_hello/hello_shared_debug_and_release/: CMakeLists.txt
test_one_VS_DLL_linked_to_both_build_types_is_dangerous/use_hello/hello_shared_release/: CMakeLists.txt
test_spng_png16/: CMakeLists.txt  README.md  testbed.cpp
test_spng_png16/libpng_build_steps/: README.md  android-arm64-build.sh  linux-x64.sh
test_tsan/: my.hpp
test_xmake_opencv/: README.md  test.cpp  xmake.lua
tsan_test/: CMakeLists.txt  README.md  my.cpp  testbed.cpp
